--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   </title>
   
   <h1>
-    It's over, Anakin!
+    This is A story of a young man, much younger than myself.
   </h1>
   
   <body>
-    I have the highground!
+    (he's have the big gayy)
   </body>
 
 </html>
