--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
   </title>
   
   <h1>
-    Pecking Order (offical)
+    Keaton Ferguson and his Website: A blog
   </h1>
   
   <body>
     <b>
-    1.N8
+    Kachinga
     </b>
   </body>
 
    <aside>
-     haha yes
+     kerchoo
   </aside>
   
   
