--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   </title>
   
   <h1>
+    <style:"color : red">
     Keaton Ferguson and his Website: A blog
+      </style>
+   
   </h1>
   
   <body>
