--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </title>
   
   <h1>
-    <style:"color : red">
+    <style:"color : red"Keaton Ferguson and his Website: A blog>
     Keaton Ferguson and his Website: A blog
       </style>
    
