--- a/index.html
+++ b/index.html
@@ -3,12 +3,8 @@
      Keaton Ferguson's Website
   </title>
   
-  <h1>
-    <style:"color : red"Keaton Ferguson and his Website: A blog>
-    Keaton Ferguson and his Website: A blog
-      </style>
-   
-  </h1>
+  <h1 style="color : red"The Best Corner of the Interwebs</h1>
+  <h1> The best Corner of the Interwebs </h1>
   
   <body>
     <b>
