--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
      Keaton Ferguson's Website
   </title>
   
-  <h1 style="color : red"The Best Corner of the Interwebs</h1>
+  <h1 style="color : red">The Best Corner of the Interwebs</h1>
   <h1> The best Corner of the Interwebs </h1>
   
   <body>
