--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
      Keaton Ferguson's Website
   </title>
   
-  <h1 style="color : red">     A dank  ass   website</h1>
+  <h1 style="color : red"> A dank ass website</h1>
   
   <body>
     <b>
@@ -14,11 +14,10 @@
    <aside>
      kerchoo
   </aside>
-  <a>
-    http://bacon.wikia.com/wiki/Squeez_Bacon
-  </a>
+ 
+  <b style="color : orange"> 
     I Miss Juice Squeeze :(
-  </a>
+  </b>
   
   
   
