--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </aside>
  
   <b style="color : orange"> 
-    I Miss Juice Squeeze :(
+    I Miss Juice Squeeze :(, big rip for juice squeeze
   </b>
   
   
