--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   </aside>
  
   <b style="color : orange"> 
-    I Miss Juice Squeeze :(, big rip for juice squeeze
+    I Miss Juice Squeeze :(
+    <br>
+    big rip for juice squeeze
   </b>
   
   
