--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     big rip for juice squeeze
   </b>
   
+  <b>
+    <img src ="81IO3xdcFvS._SL1500_.jpg" alt = "RIP :_(">
+  </b>
+  
   
   
 </html>
