--- a/index.html
+++ b/index.html
@@ -9,23 +9,22 @@
   
   <body>
     <b>
-    Kachinga
-    </b>
+      Kachinga
+    </b>  
+    <squeeze style="color : orange"> 
+      I Miss Juice Squeeze :(
+      <br>
+      big rip for juice squeeze
+      <img src ="81IO3xdcFvS._SL1500_.jpg" alt = "RIP :_("> 
+    </squeeze>
+
   </body>
 
    <aside>
      kerchoo
   </aside>
  
-  <b style="color : orange"> 
-    I Miss Juice Squeeze :(
-    <br>
-    big rip for juice squeeze
-  </b>
-  
-  <b>
-    <img src ="81IO3xdcFvS._SL1500_.jpg" alt = "RIP :_(">
-  </b>
+
   
   
   
