--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     A dank ass website
   </h1>
   
+  <aside>
+     kerchoo
+  </aside>
+  
   <body>
     <b>
-      Kachinga
+      Kachinga<br>
     </b>  
     <squeeze style="color : orange"> 
       I Miss Juice Squeeze :(
@@ -20,9 +24,7 @@
 
   </body>
 
-   <aside>
-     kerchoo
-  </aside>
+
  
 
   
