--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
      Keaton Ferguson's Website
   </title>
   
-  <h1 style="color : red"> 
+  <h1 style="color : red" font-family:Comic Sans MS> 
     A dank ass website
   </h1>
   
