--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
      Keaton Ferguson's Website
   </title>
   
-  <h1 style="color : red" <css>font-family:Comic Sans MS;</css>> 
+  <h1 style="color : red" 
+  <css> 
+  h1 {font-family:Comic Sans MS}
+  </css>> 
     A dank ass website
   </h1>
   
