--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
   </title>
   
   <h1 style="color : red" 
-  <css> 
-  h1 {font-family:Comic Sans MS}
-  </css>> 
+
     A dank ass website
   </h1>
   
@@ -26,11 +24,12 @@
     </squeeze>
 
   </body>
-
-
- 
-
-  
   
   
 </html>
+
+<css>
+  <h1>
+     A dank ass website
+  </h1>
+</css>
