--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </html>
 
 <css>
-  <h1>
+  <h1 { background-color: #004060; color: #ffffff; padding: 4px 8px; }>
      A dank ass website
   </h1>
 </css>
