--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
     <b>
       Kachinga<br>
     </b>  
-    <squeeze style="color : orange"> 
+    <squeeze style="color : green"> 
       I Miss Juice Squeeze :(
       <br>
+     <squeeze font="size : 20">
       big rip for juice squeeze
+      </squeeze>
       <img src ="81IO3xdcFvS._SL1500_.jpg" alt = "RIP :_("> 
     </squeeze>
 
