--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     
   </aside>
   
-  <body>
-    <b>
+  <paragraph>
+    <p1>
       Kachinga<br>
-    </b>  
+    </p1>  
     <squeeze style="color : green"> 
       I Miss Juice Squeeze :(
       <br>
@@ -26,7 +26,7 @@
       <img src ="81IO3xdcFvS._SL1500_.jpg" alt = "RIP :_("> 
     </squeeze>
 
-  </body>
+  </paragraph>
   
   
 </html>
