--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
   </aside>
   
-  <paragraph>
+  <paragraph1>
     <p1>
       Kachinga<br>
     </p1>  
@@ -26,7 +26,7 @@
       <img src ="81IO3xdcFvS._SL1500_.jpg" alt = "RIP :_("> 
     </squeeze>
 
-  </paragraph>
+  </paragraph1>
   
   <style>
     .paragraph1 {font-size: 200;}
