--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p1>
       Kachinga<br>
     </p1>  
-    <squeeze style="color : green"> 
+    <squeeze style="color : blue"> 
       I Miss Juice Squeeze :(
       <br>
      <squeeze font:"size : 200%">
