--- a/index.html
+++ b/index.html
@@ -1,22 +1,42 @@
 <html>
-  <title>
-     Keaton Ferguson's Website
+  <head>
+    <title>
+      Keaton Ferguson's Website
+    </title>
+    <style type="text/css">
+      <!--
+        body 
+        {
+        font-family: verdana, arial, sans-serif;
+        }
+        title
+        {
+        font-size: 120%;
+        }
+        text
+        {
+        text-decoration: none;
+        }
+        link
+        {
+        font-size: 90%;
+        }
+      -->
+    </style>
+  </head>
+  <body>
+  <title> 
+    A dank ass website
   </title>
   
-  <h1 style="color : red"> 
-
-    A dank ass website
-  </h1>
-  
-  <aside>
+  <text>
      haha made you look
-    
-  </aside>
+  </text>
   
   <paragraph1>
-    <p1>
-      Kachinga<br>
-    </p1>  
+    <link>
+      href="https://www.reddit.com/r/Nuggbuckets/">Kachinga
+    </link>  
     <squeeze style="color : blue"> 
       I Miss Juice Squeeze :(
       <br>
@@ -27,11 +47,5 @@
     </squeeze>
 
   </paragraph1>
-  
-  <style>
-    .paragraph1 {font-size: 200;}
-  </style>
-  
-  
-  
+    </body>
 </html>
