--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
       A dank ass website
     </h1>
   
-    <a>
+    <p>
      haha made you look
-    </a>
+    </p>
   
     <paragraph1>
-      <p>
-        href="https://www.reddit.com/r/Nuggbuckets/">Kachinga
-      </p>  
+      <a href="https://www.reddit.com/r/Nuggbuckets/">
+        Kachinga
+      </a>  
       <squeeze style="color : blue"> 
         I Miss Juice Squeeze :(
         <br>
