--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
         }
         h1
         {
-        font-size: 120%;
+          font-size: 120%;
+          text-align center;
         }
         a
         {
-        text-decoration: none;
+          text-decoration: none;
         }
         p
         {
-        font-size: 90%;
+          font-size: 90%;
         }
       -->
     </style>
