--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         }
         h1
         {
-          font-size: 150%;
-          text-align center;
+          font-size: 200%;
+          text-align: center;
         }
         a
         {
