--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
         a
         {
           text-decoration: none;
+          text-align: center;
+
         }
         p
         {
           font-size: 90%;
+          text-align: center;
         }
       -->
     </style>
