--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <!--
         body 
         {
-        font-family: verdana, arial, sans-serif;
+        font-family: "Comic Sans MS", cursive, sans-serif;
         }
         h1
         {
@@ -16,13 +16,13 @@
         }
         a
         {
-          text-decoration: none;
+          color : blue;
           text-align: center;
 
         }
         p
         {
-          font-size: 90%;
+          font-size: 100%;
           text-align: center;
         }
       -->
@@ -42,14 +42,14 @@
         Kachinga
         <br>
       </a>  
-      <squeeze style="color : blue"> 
+      <p>
         I Miss Juice Squeeze :(
         <br>
-        <squeeze font:"size : 200%">
-        big rip for juice squeeze
-        </squeeze>
+        <p>
+          big rip for juice squeeze
+        </p>
         <img src ="81IO3xdcFvS._SL1500_.jpg" alt = "RIP :_("> 
-      </squeeze>
+      </p>
       
     </paragraph1>
   </body>
