--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>
-      Keaton Ferguson's Website
+      - Leather Stuff -
     </title>
     <style type="text/css">
       <!--
