--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>
-      - Leather Stuff -
+      Keaton's Leatherwork
     </title>
     <style type="text/css">
       <!--
@@ -23,19 +23,26 @@
           font-size: 100%;
           text-align: center;
         }
+      #devider
+      {
+       border: 1px solid black;
+       padding : 40px;
+      }
       -->
     </style>
   </head>
   <body>
     <h1> 
-      A dank ass website
+      - Leather Stuff -
     </h1>
   
     <p>
-     haha made you look
+      By Keaton Ferguson
+      <br>
+      <ul id="#devider">
     </p>
     <a href="https://www.reddit.com/r/Nuggbuckets/">
-      Kachinga
+      
     </a>  
     <p>
       I Miss Juice Squeeze :(
