--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <p>
       By Keaton Ferguson
       <br>
-      <ul id="#devider">
+      <ul id="devider">
     </p>
     <a href="https://www.reddit.com/r/Nuggbuckets/">
       
