--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <!--
         body 
         {
-        font-family: "Comic Sans MS", cursive, sans-serif;
+        font-family: "Cambria", normal, sans-serif;
         }
         h1
         {
@@ -17,6 +17,7 @@
         a
         {
           color: 	#0000FF;
+          text-align:center;
         }
         p
         {
