--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         a
         {
           color: 	#0000FF;
-          text-align:center;
+          text-align: center;
         }
         p
         {
@@ -40,10 +40,12 @@
     <p>
       By Keaton Ferguson
       <br>
+      </p>
       <ul id="devider">
-    </p>
-    <a href="https://www.reddit.com/r/Nuggbuckets/">
-      <img src ="81IO3xdcFvS._SL1500_.jpg" alt = "RIP :_(">
-    </a>  
+       <a href="https://keatonferguson.com/shop">
+         <img src ="81IO3xdcFvS._SL1500_.jpg" alt = "RIP :_(">
+       </a>
+      </ul>
+    
   </body>
 </html>
