--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <br>
       </p>
       <ul id="devider">
-       <a href="https://keatonferguson.com/shop">
+       <a href="keatonferguson.com/shop">
          <img src ="81IO3xdcFvS._SL1500_.jpg" alt = "RIP :_(">
        </a>
       </ul>
