--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
       <br>
       </p>
       <ul id="devider">
-       <a href="keatonferguson.com/shop">
+       <p href="keatonferguson.com/shop">
          <img src ="81IO3xdcFvS._SL1500_.jpg" alt = "RIP :_(">
-       </a>
+       </p>
       </ul>
     
   </body>
