--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       #devider
       {
        border: 1px solid black;
+       background: url(Background.jpg);
        padding : 40px;
       }
       -->
@@ -42,9 +43,18 @@
       <br>
       </p>
       <ul id="devider">
-       <p href="keatonferguson.com/shop">
-         <img src ="81IO3xdcFvS._SL1500_.jpg" alt = "RIP :_(">
-       </p>
+       <a href="keatonferguson.com/shop">
+         Shop
+         <br>
+       </a>
+       <a href="keatonferguson.com/About">
+        About
+        <br>
+      </a>
+       <a href="keatonferguson.com/Contact">
+        Contact
+        <br>
+      </a>
       </ul>
     
   </body>
