--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
     <p>
       By Keaton Ferguson
       <br>
-      </p>
+    </p>
       <ul id="devider">
+       background: url(Background.jpg);
        <a href="keatonferguson.com/shop">
          Shop
          <br>
