--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
       #devider
       {
        border: 1px solid black;
-       background: url(Background.jpg);
+       width: 500px;
+       hieght: 200px;
        padding : 40px;
       }
       -->
@@ -58,6 +59,5 @@
         <br>
       </a>
       </ul>
-    
   </body>
 </html>
