--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
         }
       #devider
       {
+       position: relative;
        border: 1px solid black;
-       width: 500px;
+       width: 200px;
        hieght: 200px;
        padding : 40px;
       }
