--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         a
         {
           color: 	#0000FF;
-          
+          font-size: 500%;
           text-align: center;
         }
         p
@@ -27,12 +27,8 @@
         }
       #devider
       {
-       position: relative;
        border: 1px solid black;
-       width: 1500px;
-       hieght: 1500px;
        padding : 40px;
-       background: url(Background.jpg);
       }
       -->
     </style>
@@ -47,6 +43,7 @@
       <br>
     </p>
       <ul id="devider">
+        background: url(Background.jpg);
        <a href="keatonferguson.com/shop">
          Shop
          <br>
