--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       {
        border: 1px solid black;
        background: url(Background.jpg);
+       background-size: 540px 720px; 
        padding : 40px;
       }
       -->
