--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
       {
        border: 1px solid black;
        background: url(Background.jpg);
-       background-size: 540px 720px; 
+       background-size: 1000px 720px; 
+       background-repeat: false;
        padding : 40px;
       }
       -->
