--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       #devider
       {
        border: 1px solid black;
-       size: 2000ox 1080px;
+       height: 2000ox;
        background: url(Background.jpg);
-       background-size: 2000px 1080px; 
+       background-size: 2000px 720px; 
        background-repeat: false;
        padding : 40px;
       }
