--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       #devider
       {
        border: 1px solid black;
-       height: 2000ox;
+       height: 2000px;
        background: url(Background.jpg);
        background-size: 2000px 720px; 
        background-repeat: false;
