--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
        border: 1px solid black;
        height: 2000px;
        background: url(Background.jpg);
-       background-size: 2000px 720px; 
+       background-size: 1080px 720px
        background-repeat: false;
        padding : 40px;
       }
