--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
        border: 1px solid black;
        height: 2000px;
        background: url(Background.jpg);
-       background-size: 1080px 720px
+       background
+       background-size: contain;
        background-repeat: false;
        padding : 40px;
       }
