--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
        height: 5000px;
        background: url(Background.jpg);
        background-size: contain;
-       background-repeat: false;
+       background-repeat: no-repeat;
        padding : 40px;
       }
       -->
