--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       #devider
       {
        border: 1px solid black;
-       height: 5000px;
        background: url(Background.jpg);
+       height: Background.jpg.height;
        background-size: contain;
        background-repeat: no-repeat;
        padding : 40px;
