--- a/index.html
+++ b/index.html
@@ -18,7 +18,28 @@
 	</nav>
 
 	<div class = "leftSideBar">
-
+<ul>
+			<li>
+				<audio controls style="padding-bottom:50px; padding-top:65px">
+	 	 		<source src="Audio1.mp3" type="audio/mp3"> 
+	  			</audio>
+	   		</li>
+			<li>
+				<audio controls style="padding-bottom:250px;">
+	 	 		<source src="Audio2.mp3" type="audio/mp3"> 
+	  			</audio>
+	   		</li>
+	   		<li>
+				<audio controls style="padding-bottom:200px;">
+	 	 		<source src="Audio3.mp3" type="audio/mp3"> 
+	  			</audio>
+	   		</li>
+	   		<li>
+				<audio controls>
+	 	 		<source src="Audio4.mp3" type="audio/mp3"> 
+	  			</audio>
+	   		</li>
+		</ul>
 	</div>
 
 	<div class = "rightSideBar">
