--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <ul>
 			<li>
 				<audio controls style="padding-bottom:50px; padding-top:65px">
-	 	 		<source src="Audio1.mp3" type="audio/mp3"> 
+	 	 		<source src="https://raw.githubusercontent.com/keatonferguson/KeatonsDankAssWebsite/gh-pages/Audio1.mp3" type="audio/mp3"> 
 	  			</audio>
 	   		</li>
 			<li>
