--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			
 		</p>
 		
-		<p>If you would like to see the </p> <a href="https://raw.githubusercontent.com/keatonferguson/KeatonsDankAssWebsite/gh-pages/index.html" download="html"> <p> html </p> <p>or </p> <a href="https://raw.githubusercontent.com/keatonferguson/KeatonsDankAssWebsite/gh-pages/style.css" download="css"> <p> css </p> <p>here they are!</p>
+		<p>If you would like to see the </p> <a href="https://raw.githubusercontent.com/keatonferguson/KeatonsDankAssWebsite/gh-pages/index.html" html ><p>or </p> <a href="https://raw.githubusercontent.com/keatonferguson/KeatonsDankAssWebsite/gh-pages/style.css" css ><p>here they are!</p>
 		</div>
 	</section>
 
