--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			
 		</p>
 		
-		<p>If you would like to see the </p> <a href="https://raw.githubusercontent.com/keatonferguson/KeatonsDankAssWebsite/gh-pages/index.html"> html </a><p>or </p> <a href="https://raw.githubusercontent.com/keatonferguson/KeatonsDankAssWebsite/gh-pages/style.css"> css </a><p>here they are!</p>
+		<p>If you would like to see the<a href="https://raw.githubusercontent.com/keatonferguson/KeatonsDankAssWebsite/gh-pages/index.html"> html </a>or<a href="https://raw.githubusercontent.com/keatonferguson/KeatonsDankAssWebsite/gh-pages/style.css"> css </a>here they are!</p>
 		</div>
 	</section>
 
