--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<nav id="navbar">
 		<img id = "logo" src="./images/logo.png" alt = "logo" height = "50">
 			<ul>
-				<li><a href="file:///C:/Users/devde/KeatonWebsite/index.html">Home</a></li>
+				<li><a href="https://github.com/keatonferguson/KeatonsDankAssWebsite/edit/master/index.html">Home</a></li>
 				<li><a href="file:///C:/Users/devde/KeatonWebsite/about.html">About</a></li>
 				<li><a href="file:///C:/Users/devde/KeatonWebsite/shop.html">Shop</a></li>
 				<li><a href="file:///C:/Users/devde/KeatonWebsite/blog.html">Blog</a></li>
