--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<li><a href="https://github.com/keatonferguson/KeatonsDankAssWebsite/edit/master/index.html">Home</a></li>
 				<li><a href="file:///C:/Users/devde/KeatonWebsite/about.html">About</a></li>
 				<li><a href="file:///C:/Users/devde/KeatonWebsite/shop.html">Shop</a></li>
-				<li><a href="file:///C:/Users/devde/KeatonWebsite/blog.html">Blog</a></li>
+				<li><a href="https://github.com/keatonferguson/KeatonsDankAssWebsite/blob/master/blog.html">Blog</a></li>
 			</ul>
 	</nav>
 
