--- a/about.html
+++ b/about.html
@@ -2,23 +2,23 @@
 <html>
 <head>
 	<title>Keaton's Website</title>
-	<link rel = "stylesheet" type = "text/css" href = "style/style.css">
+	<link rel = "stylesheet" type = "text/css" href = "https://github.com/keatonferguson/KeatonsDankAssWebsite/blob/master/style.css">
 </head>
 
 <body>
 	<header id="main-header">
 		<div class="top-header">
-			<h1>About</h1>
+			<h1>Home</h1>
 		</div>
 	</header>
 
 	<nav id="navbar">
-		<img id = "logo" src="./images/logo.png" alt = "logo" height = "50">
+		<img id = "logo" src="https://github.com/keatonferguson/KeatonsDankAssWebsite/blob/master/logo.png" alt = "logo" height = "50">
 			<ul>
-				<li><a href="file:///C:/Users/devde/KeatonWebsite/index.html">Home</a></li>
-				<li><a href="file:///C:/Users/devde/KeatonWebsite/about.html">About</a></li>
-				<li><a href="file:///C:/Users/devde/KeatonWebsite/shop.html">Shop</a></li>
-				<li><a href="file:///C:/Users/devde/KeatonWebsite/blog.html">Blog</a></li>
+				<li><a href="https://github.com/keatonferguson/KeatonsDankAssWebsite/edit/master/index.html">Home</a></li>
+				<li><a href="https://github.com/keatonferguson/KeatonsDankAssWebsite/blob/master/about.html">About</a></li>
+				<li><a href="https://github.com/keatonferguson/KeatonsDankAssWebsite/blob/master/shop.html">Shop</a></li>
+				<li><a href="https://github.com/keatonferguson/KeatonsDankAssWebsite/blob/master/blog.html">Blog</a></li>
 			</ul>
 	</nav>
 
