--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Keaton's Website</title>
-	<link rel = "stylesheet" type = "text/css" href = "https://github.com/keatonferguson/KeatonsDankAssWebsite/blob/master/style.css">
+	<link rel = "stylesheet" type = "text/css" href = "master/style.css">
 </head>
 
 <body>
