--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
 	</header>
 
 	<nav id="navbar">
-		<img id = "logo" src="https://github.com/keatonferguson/KeatonsDankAssWebsite/blob/master/logo.png" alt = "logo" height = "50">
+		<img id = "logo" src="logo.png" alt = "logo" height = "50">
 			<ul>
-				<li><a href="https://github.com/keatonferguson/KeatonsDankAssWebsite/edit/master/index.html">Home</a></li>
-				<li><a href="https://github.com/keatonferguson/KeatonsDankAssWebsite/blob/master/about.html">About</a></li>
-				<li><a href="https://github.com/keatonferguson/KeatonsDankAssWebsite/blob/master/shop.html">Shop</a></li>
-				<li><a href="https://github.com/keatonferguson/KeatonsDankAssWebsite/blob/master/blog.html">Blog</a></li>
+				<li><a href="keatonferguson.com/index">Home</a></li>
+				<li><a href="keatonferguson.com/about">About</a></li>
+				<li><a href="keatonferguson.com/shop">Shop</a></li>
+				<li><a href="keatonferguson.com/blog">Blog</a></li>
 			</ul>
+	</nav>
 	</nav>
 
 	<section id = "main">
