--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<header id="main-header">
 		<div class="top-header">
-			<h1>Home</h1>
+			<h1>Keaton Ferguson</h1>
 		</div>
 	</header>
 
