--- a/index.html
+++ b/index.html
@@ -1,40 +1,78 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Keaton's Website</title>
-	<link rel = "stylesheet" type = "text/css" href = "style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Website Title</title>
+    <style>
+        /* Reset some default styles to make the page cleaner */
+        body, h1, ul {
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
+        }
+
+        header {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px 0;
+        }
+
+        header h1 {
+            font-size: 36px;
+        }
+
+        nav {
+            background-color: #444;
+            text-align: center;
+        }
+
+        nav ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        nav li {
+            display: inline;
+            margin: 0 20px;
+        }
+
+        nav a {
+            text-decoration: none;
+            color: #fff;
+        }
+
+        main {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+            border: 1px solid #ddd;
+        }
+    </style>
 </head>
-
 <body>
-	<header id="main-header">
-		<div class="top-header">
-			<h1>Keaton Ferguson</h1>
-		</div>
-	</header>
-
-	<nav id="navbar">
-		<img id = "logo" src="logo.png" alt = "logo" height = "50">
-			<ul>
-				<li><a href="keatonferguson.com/index">Home</a></li>
-				<li><a href="keatonferguson.com/about">About</a></li>
-				<li><a href="keatonferguson.com/shop">Shop</a></li>
-				<li><a href="keatonferguson.com/blog">Blog</a></li>
-			</ul>
-	</nav>
-	</nav>
-
-	<section id = "main">
-		<div class = "container">
-			<h1>Welcome</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		</div>
-		
-	</section>
-
+    <header>
+        <h1>Your Website Title</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/services">Services</a></li>
+            <li><a href="/contact">Contact</a></li>
+        </ul>
+    </nav>
+    <main>
+        <!-- Content of your subpages goes here -->
+        <h2>Welcome to Your Website</h2>
+        <p>This is the homepage of your clean and organized website. You can customize this main content area for each subpage.</p>
+    </main>
 </body>
 </html>
+
