--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Website Title</title>
+    <title>Keaton Ferguson's Website/title>
     <style>
         /* Reset some default styles to make the page cleaner */
         body, h1, ul {
@@ -20,7 +20,7 @@
             background-color: #333;
             color: #fff;
             text-align: center;
-            padding: 10px 0;
+            padding: 20px 0;
         }
 
         header h1 {
@@ -58,13 +58,14 @@
 </head>
 <body>
     <header>
-        <h1>Your Website Title</h1>
+        <h1>Keaton Ferguson</h1>
     </header>
     <nav>
         <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/services">Services</a></li>
+            <li><a href="/about">Research</a></li>
+            <li><a href="/services">Machining</a></li>
+            <li><a href="/services">Leatherwork</a></li>
             <li><a href="/contact">Contact</a></li>
         </ul>
     </nav>
