--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/about">Research</a></li>
-            <li><a href="/services">Machining</a></li>
-            <li><a href="/services">Leatherwork</a></li>
+            <li><a href="/machining">Machining</a></li>
+            <li><a href="/pct">PCT</a></li>
+            <li><a href="/leatherwork">Leatherwork</a></li>
             <li><a href="/contact">Contact</a></li>
         </ul>
     </nav>
