--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
         </ul>
     </nav>
     <main>
-        <!-- Content of your subpages goes here -->
-        <h2>Welcome to Your Website</h2>
-        <p>This is the homepage of your clean and organized website. You can customize this main content area for each subpage.</p>
+        <p>I'm a specialist at SCIPP, working on the ATLAS Pixels project. My time here in Santa Cruz is running short, sadly, as  I prepare to leave for the Pacific Crest Trail. I hope to update the PCT page with my preparation, and eventually some summation of my experience of the trail.</p>
+        <p>I plan on attending UC Berkeley's Physics P.h.D. program in the fall (unless UC Santa Barbara lets me in, and then I have a difficult decision). </p>
+        <p>Besides building things at work (see research, machining pages), I enjoy building things in my free time (see leatherworking). </p>
     </main>
 </body>
 </html>
