--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
     </header>
     <nav>
         <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/about">Research</a></li>
-            <li><a href="/machining">Machining</a></li>
-            <li><a href="/pct">PCT</a></li>
-            <li><a href="/leatherwork">Leatherwork</a></li>
-            <li><a href="/contact">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="pages/research.html">Research</a></li>
+            <li><a href="pages/machining.html">Machining</a></li>
+            <li><a href="pages/pct.html">PCT</a></li>
+            <li><a href="pages/leatherwork.html">Leatherwork</a></li>
+            <li><a href="pages/contact.html">Contact</a></li>
         </ul>
     </nav>
     <main>
