--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
         body {
             font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
+            background-color: #ffffff;
         }
 
         header {
-            background-color: #333;
+            background-color: #e31783;
             color: #fff;
             text-align: center;
             padding: 100px 0;
@@ -28,7 +28,7 @@
         }
 
         nav {
-            background-color: #444;
+            background-color: #ff5eb3;
             text-align: center;
         }
 
@@ -62,19 +62,18 @@
     </header>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="pages/research.html">Research</a></li>
-            <li><a href="pages/machining.html">Machining</a></li>
-            <li><a href="pages/pct.html">PCT</a></li>
-            <li><a href="pages/leatherwork.html">Leatherwork</a></li>
-            <li><a href="pages/contact.html">Contact</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/about">Research</a></li>
+            <li><a href="/machining">Machining</a></li>
+            <li><a href="/pct">PCT</a></li>
+            <li><a href="/leatherwork">Leatherwork</a></li>
+            <li><a href="/contact">Contact</a></li>
         </ul>
     </nav>
     <main>
+        <!-- Content of your subpages goes here -->
         <p>I'm a specialist at SCIPP, working on the ATLAS Pixels project. My time here in Santa Cruz is running short, sadly, as  I prepare to leave for the Pacific Crest Trail. I hope to update the PCT page with my preparation, and eventually some summation of my experience of the trail.</p>
         <p>I plan on attending UC Berkeley's Physics P.h.D. program in the fall (unless UC Santa Barbara lets me in, and then I have a difficult decision). </p>
         <p>Besides building things at work (see research, machining pages), I enjoy building things in my free time (see leatherworking). </p>
     </main>
 </body>
-</html>
-
