--- a/pages/pct.html
+++ b/pages/pct.html
@@ -17,7 +17,7 @@
         }
 
         header {
-            background-color: #333;
+            background-color: #1aa61c;
             color: #fff;
             text-align: center;
             padding: 100px 0;
@@ -28,7 +28,7 @@
         }
 
         nav {
-            background-color: #444;
+            background-color: #8bc784;
             text-align: center;
         }
 
@@ -71,7 +71,11 @@
         </ul>
     </nav>
     <main>
-        <p> Backpacking! </p>
+        <p>While an undergraduate at UCSC, I would tell people that I would run away into the woods after college.
+            While I will not be running, hiking a well defined path seemed like a reasonable interpretation of that idea. </p>
+        <p>While I have not been backpacking for very long, the dozen trips or so I have embarked on have been wonderful.
+            One of my favorite hiking experiences was an 18 mile day hike in 80 degree heat, where we ran out of water...
+            I look forward to the challenges the trail will put my mind, body and soul through.</p>
     </main>
 </body>
 </html>
