--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="pages/research.html">Research</a></li>
             <li><a href="pages/machining.html">Machining</a></li>
-            <li><a href="pages/pct">PCT</a></li>
+            <li><a href="pages/pct.html">PCT</a></li>
             <li><a href="pages/leatherwork.html">Leatherwork</a></li>
             <li><a href="pages/contact.html">Contact</a></li>
         </ul>
