--- a/pages/pct.html
+++ b/pages/pct.html
@@ -62,7 +62,7 @@
     </header>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="/index.html">Home</a></li>
             <li><a href="pages/research.html">Research</a></li>
             <li><a href="pages/machining.html">Machining</a></li>
             <li><a href="pages/pct.html">PCT</a></li>
