--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Keaton Ferguson's Website</title>
+    <title>Contact Keaton Ferguson</title>
     <style>
         /* Reset some default styles to make the page cleaner */
         body, h1, ul {
@@ -58,7 +58,7 @@
 </head>
 <body>
     <header>
-        <h1>Keaton Ferguson</h1>
+        <h1>Contact</h1>
     </header>
     <nav>
         <ul>
@@ -72,9 +72,8 @@
     </nav>
     <main>
         <!-- Content of your subpages goes here -->
-        <p>I'm a specialist at SCIPP, working on the ATLAS Pixels project. My time here in Santa Cruz is running short, sadly, as  I prepare to leave for the Pacific Crest Trail. I hope to update the PCT page with my preparation, and eventually some summation of my experience of the trail.</p>
-        <p>I plan on attending UC Berkeley's Physics P.h.D. program in the fall (unless UC Santa Barbara lets me in, and then I have a difficult decision). </p>
-        <p>Besides building things at work (see research, machining pages), I enjoy building things in my free time (see leatherworking). </p>
+        <p> I am happy to discuss physics, hiking, role playing games (Pathfinder 2e player)!</p>
+        <p> email: keaton@keatonferguson.com</p>
     </main>
 </body>
 </html>
