--- a/index.html
+++ b/index.html
@@ -106,19 +106,19 @@
         </figure>
         <figure>
             <img src="images/mountain.jpg" alt="Image 3">
-            <figcaption>Caption for Image 3</figcaption>
+            <figcaption>Mountain's Climbing</figcaption>
         </figure>
         <figure>
             <img src="images/topgun.jpg" alt="Image 4">
-            <figcaption>Caption for Image 4</figcaption>
+            <figcaption>The Topgun soundtrack</figcaption>
         </figure>
         <figure>
-            <img src="image5.jpg" alt="Image 5">
-            <figcaption>Caption for Image 5</figcaption>
+            <img src="images/guitar.jpg" alt="Image 5">
+            <figcaption>An unknown folk album</figcaption>
         </figure>
         <figure>
-            <img src="image6.jpg" alt="Image 6">
-            <figcaption>Caption for Image 6</figcaption>
+            <img src="images/lion.jpg" alt="Image 6">
+            <figcaption>The Lion King soundtrack</figcaption>
         </figure>
     </div>
     </main>
