--- a/index.html
+++ b/index.html
@@ -88,6 +88,12 @@
         </ul>
     </nav>
     <main>
+        <div class="image-container">
+        <figure>
+            <img src="images/keaton.jpg" alt="Image 1">
+            <figcaption>Iggy Pop's Lust for Life</figcaption>
+        </figure>
+        </div>
         <p>Most recerntly a specialist at SCIPP (Santa Cruz Institute of Particle Physics), working on the ATLAS Pixels project. My time here in Santa Cruz is running short, sadly,
             as  I prepare to leave for the Pacific Crest Trail (PCT), or whatever else this summer holds (pending knee problems). See "summer plans". 
             Regardless of where this summer takes me, I am in desperate need of vacation.</p>
