--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="image-container">
         <figure>
             <img src="images/keaton.jpg" alt="Image 1">
-            <figcaption>Iggy Pop's Lust for Life</figcaption>
+            <figcaption>Keaton Ferguson, moving in freshman year at UCSC</figcaption>
         </figure>
         </div>
         <p>Most recerntly a specialist at SCIPP (Santa Cruz Institute of Particle Physics), working on the ATLAS Pixels project. My time here in Santa Cruz is running short, sadly,
