--- a/index.html
+++ b/index.html
@@ -72,6 +72,23 @@
             margin-top: 5px;
             font-style: italic;
         }
+        .image-container2 {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+
+        /* Styles for individual images */
+        .image-container2 img {
+            max-width: 500px;
+            margin: 10px;
+        }
+
+        /* Styles for captions */
+        .image-container2 figcaption {
+            text-align: center;
+            margin-top: 5px;
+            font-style: italic;
     </style>
 </head>
 <body>
@@ -88,7 +105,7 @@
         </ul>
     </nav>
     <main>
-        <div class="image-container">
+        <div class="image-container2">
         <figure>
             <img src="images/keaton.jpg" alt="Image 1">
             <figcaption>Keaton Ferguson, moving in freshman year at UCSC</figcaption>
