--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         </figure>
         <figure>
             <img src="images/stan.jpg" alt="Image 2">
-            <figcaption>Stan Getz' </figcaption>
+            <figcaption>Compilation of Stan Getz</figcaption>
         </figure>
         <figure>
             <img src="images/mountain.jpg" alt="Image 3">
