--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         body {
             font-family: Arial, sans-serif;
             background-color: #000000;
+            text-color: #ffffff;
         }
 
         header {
@@ -71,6 +72,7 @@
             text-align: center;
             margin-top: 5px;
             font-style: italic;
+            text-color: #ffffff;
         }
         .image-container2 {
             display: flex;
