--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         body {
             font-family: Arial, sans-serif;
             background-color: #000000;
-            text-color: #ffffff;
+            color: white;
         }
 
         header {
@@ -72,7 +72,7 @@
             text-align: center;
             margin-top: 5px;
             font-style: italic;
-            text-color: #ffffff;
+            color: white;
         }
         .image-container2 {
             display: flex;
