--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         }
 
         nav {
-            background-color: #ff5eb3;
+            background-color: #b32972;
             text-align: center;
         }
 
